[package]
name = "healthyhome"
version = "0.1.0"
authors = ["brambonne"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = "2.33"
config = "0.10"
reqwest = { version = "0.11", features = ["blocking", "json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
